--- a/style.css
+++ b/style.css
@@ -9,6 +9,6 @@
 
   --themeDotBorder: black;
 
-  --previewBG: rgb(251, 249, 243, 0.8);
+  --previewBG: white;
   --previewShadow: rgba(110, 147, 92, 0.721);
 }
