--- a/style.css
+++ b/style.css
@@ -70,5 +70,5 @@ li{
   border: 1px solid var(--borderColor);
   border-radius: 5px 5px 0 0;
   box-shadow: black;
-  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -1px 1px 3px -1px black;
 }
