--- a/style.css
+++ b/style.css
@@ -69,6 +69,6 @@ li{
   background-color: var(--subColor);
   border: 1px solid var(--borderColor);
   border-radius: 5px 5px 0 0;
-  box-shadow: black;
+  box-shadow: -1px 1px 3px -1px black;
   -webkit-box-shadow: -1px 1px 3px -1px black;
 }
