--- a/style.css
+++ b/style.css
@@ -71,5 +71,5 @@ li{
   border-radius: 5px 5px 0 0;
   box-shadow: -1px 1px 3px -1px black;
   -webkit-box-shadow: -1px 1px 3px -1px black;
-  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 1px 3px -1px black;
 }
