--- a/style.css
+++ b/style.css
@@ -72,4 +72,5 @@ li{
   box-shadow: -1px 1px 3px -1px black;
   -webkit-box-shadow: -1px 1px 3px -1px black;
   -moz-box-shadow: -1px 1px 3px -1px black;
+  display: grid;
 }
