--- a/style.css
+++ b/style.css
@@ -73,4 +73,5 @@ li{
   -webkit-box-shadow: -1px 1px 3px -1px black;
   -moz-box-shadow: -1px 1px 3px -1px black;
   display: grid;
+  grid-template-columns: 1fr 1fr;
 }
