--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ li{
   border-radius: 50%;
   margin: 5px;
   border: 2px solid var(--themeDotBorder);
-  -webkit-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
-  box-shadow: -1px 1px 3px -1px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -1px 1px 3px -1px black;
+  -moz-box-shadow: -1px 1px 3px -1px black;
+  box-shadow: -1px 1px 3px -1px black;
 }
