--- a/style.css
+++ b/style.css
@@ -121,4 +121,5 @@ li{
   -webkit-box-shadow: -1px 1px 3px -1px black;
   -moz-box-shadow: -1px 1px 3px -1px black;
   box-shadow: -1px 1px 3px -1px black;
+  cursor: pointer;
 }
