--- a/style.css
+++ b/style.css
@@ -151,3 +151,12 @@ li{
   padding-left: 30px;
   padding-top: 30px;
 }
+
+#preview {
+  width: 300px;
+  height: 250px;
+  padding: 15px;
+  border: 1.5px solid rgb(57, 149, 179);
+  background-color: var(--previewBG);
+  position: relative;
+}
