--- a/style.css
+++ b/style.css
@@ -156,7 +156,16 @@ li{
   width: 300px;
   height: 250px;
   padding: 15px;
-  border: 1.5px solid rgb(57, 149, 179);
+  border: 1.5px solid rgb(90, 90, 251);
   background-color: var(--previewBG);
   position: relative;
+}
+
+.corner {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  border: 1.5px solid blue;
+  background-color: white;
+  position: absolute;
 }
