header tech css

--- a/style.css
+++ b/style.css
@@ -205,3 +205,11 @@ a {
   justify-content: space-evenly;
   background-color: var(--previewShadow);
 }
+
+header,
+.tech,
+.photos {
+  overflow: auto;
+  background-color: var(--mainColor);
+  border-bottom: 1px solid var(--borderColor);
+}
