--- a/style.css
+++ b/style.css
@@ -231,3 +231,10 @@ img {
   padding-bottom: 50px;
   gap: 20px;
 }
+
+.project {
+  border: 1px solid var(--borderColor);
+  -webkit-box-shadow: -1px 1px 3px -1px black;
+  -moz-box-shadow: -1px 1px 3px -1px black;
+  box-shadow: -1px 1px 3px -1px black;
+}
