--- a/style.css
+++ b/style.css
@@ -238,3 +238,10 @@ img {
   -moz-box-shadow: -1px 1px 3px -1px black;
   box-shadow: -1px 1px 3px -1px black;
 }
+
+.thumbup {
+  width: 100%;
+  height: 200px;
+  display: block;
+  object-fit: cover;
+}
