--- a/style.css
+++ b/style.css
@@ -270,3 +270,16 @@ img {
     width: 95%;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .intro {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "nav"
+      "left-side"
+      "right-side";
+  }
+  .right-side {
+    justify-content: center;
+  }
+}
