--- a/style.css
+++ b/style.css
@@ -266,6 +266,18 @@ img {
   margin: 0;
 }
 
+.container {
+  margin: 0 auto;
+  width: 1200px;
+}
+
+.Experience {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
 @media screen and (max-width: 2500px) {
   .main-container {
     width: 95%;
