--- a/style.css
+++ b/style.css
@@ -271,12 +271,12 @@ img {
   width: 1200px;
 }
 
-.Experience {
+/* .Experience {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   padding-bottom: 30px;
   padding-top: 30px;
-}
+} */
 
 @media screen and (max-width: 2500px) {
   .main-container {
