--- a/style.css
+++ b/style.css
@@ -266,10 +266,10 @@ img {
   margin: 0;
 }
 
-.container {
+/* .container {
   margin: 0 auto;
   width: 1200px;
-}
+} */
 
 /* .Experience {
   display: grid;
