--- a/style.css
+++ b/style.css
@@ -214,6 +214,12 @@ a {
   /* background-color: var(--previewShadow); */
 }
 
+.experienceandeducation {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: var(--previewShadow);
+}
+
 header,
 .tech,
 .photos {
