--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ a {
   padding-top: 30px;
 }
 
-.skillsandlanguages {
+.technicalskills {
   display: flex;
   justify-content: space-evenly;
   background-color: white
