some css update

--- a/contact.css
+++ b/contact.css
@@ -7,10 +7,11 @@ head {
   margin: 200;
  }
  
- img { height: 30px;
-       width: 30px;
-       padding: 40px 30px 30px 40px;
-       /* text-align: center; */
+ img { 
+      height: 30px;
+      width: 30px;
+      padding: 40px 30px 30px 40px;
+      /* text-align: center; */
  }         
  
  .BK { background-image: url("https://upload.wikimedia.org/wikipedia/commons/3/3c/Kiyomizu.jpg");
